Writes the manfest file.
Does not work for executables with embeded manifest files.

--- a/DPIFix/DPIFix.vcxproj.filters
+++ b/DPIFix/DPIFix.vcxproj.filters
@@ -33,4 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="invoker.admin.manifest">
+      <Filter>Resource Files</Filter>
+    </Manifest>
+  </ItemGroup>
 </Project>
